name:                roguelike
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Roguelike
  build-depends:       base >=4.9 && <4.11
                     , reflex
                     , reflex-brick
                     , vty
                     , brick
                     , containers
                     , mtl
                     , lens
                     , random
                     , linear
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable roguelike
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , roguelike
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      exe
  default-language:    Haskell2010
